tests/snapshot/inputs/errors/dictionary_contract_fail.ncl
{ foo = 1, bar = "bar" } | {_: String}
